Colocando cores e sombras.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="tela-login"></div>
-      
-    </div>
-    
+    <h1>RPG QG</h1>
+      <div class="tela-login"></div>
 </body>
 </html>
