--- a/index.html
+++ b/index.html
@@ -6,41 +6,62 @@
     <title>Tela de Login</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
 </head>
 <body>
-    <h1>RPG QG</h1>
-    <div class="tela-login">
-        <div class="vertical-line"></div>
-        <form>
-            <h2 class="login-heading">FAÇA LOGIN</h2>
-            <div class="form-container">
-                <div class="login">
-                    <input type="text" name="username" id="username" placeholder="USUÁRIO">
-                </div>
-                <div class="login">
-                    <input type="password" name="password" id="password" placeholder="SENHA">
-                </div>
-                <div class="remember-forgot">
-                    <label>
-                        <input type="checkbox"> Lembrar de mim
-                    </label>
-                    <a href="./src/pages/forgot-password.html">Esqueceu a senha?</a>
-                </div>
-                <button onClick="alert('Enviou!')" type="submit" class="btn">Entrar</button>
-                <div class="register-link">
-                    <div class="new-member">
-                        <h2 class="bem-vindo">BEM VINDO</h2>
-                        <h2>Novo Login</h2>
-                        <a href="./src/pages/register.html">Criar conta</a>
+    <div class="container">
+        <div class="area area-small">
+            <div class="new-member">
+                <h2>BEM VINDO</h2>
+                <h3>Novo Login</h3>
+                <label for="toggleForm" class="toggle-label">Criar conta</label>
+                <input type="checkbox" id="toggleForm" class="toggle-checkbox">
+                <div class="overlay" id="overlay">
+                    <div id="registerForm" class="form-content">
+                        <form>
+                            <label for="nome">Nome</label>
+                            <input type="text" id="nome" name="nome" required placeholder="Digite aqui" />
+                            <label for="email">E-mail:</label>
+                            <input type="email" id="email" name="email" required placeholder="Digite aqui" />
+                            <button type="submit">Criar</button>
+                        </form>
                     </div>
                 </div>
-            </form>
-            <div class="social-icons">
-                <a href="#" class="icon facebook"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/saga_leonne/" class="icon instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="icon twitter"><i class="fab fa-twitter"></i></a>
+                <div class="links">
+                    <a href="#" class="icon"><i class="fab fa-google"></i></a>
+                    <a href="#" class="icon"><i class="fab fa-telegram"></i></a>
+                    <a href="#" class="icon"><i class="fab fa-whatsapp"></i></a>
+                </div>
             </div>
         </div>
+        <div class="area area-large">
+            <div class="tela-login">
+                <div class="vertical-line"></div>
+                <form>
+                    <h2 class="login-heading">FAÇA LOGIN</h2>
+                    <div class="form-container">
+                        <div class="login">
+                            <input type="text" name="username" id="username" placeholder="USUÁRIO">
+                        </div>
+                        <div class="login">
+                            <input type="password" name="password" id="password" placeholder="SENHA">
+                        </div>
+                        <div class="remember-forgot">
+                            <label>
+                                <input type="checkbox"> Lembrar de mim
+                            </label>
+                            <a href="./src/pages/forgot-password.html">Esqueceu a senha?</a>
+                        </div>
+                        <button type="submit" class="btn">Entrar</button>
+                        <div class="register-link">
+                            <div class="social-icons">
+                                <a href="#" class="icon facebook"><i class="fab fa-facebook"></i></a>
+                                <a href="#" class="icon instagram"><i class="fab fa-instagram"></i></a>
+                                <a href="#" class="icon twitter"><i class="fab fa-twitter"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
-</html>
