Melhorando os icones.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <div class="new-member">
                 <h2>BEM VINDO</h2>
                 <h3>Novo Login</h3>
-                <label for="toggleForm" class="toggle-label">Criar conta</label>
-                <input type="checkbox" id="toggleForm" class="toggle-checkbox">
-                <div class="overlay" id="overlay">
+                <label for="toggleForm" class="toggle-label blue-text">Criar conta</label>
+                   <input type="checkbox" id="toggleForm" class="toggle-checkbox">   
+                    <div class="overlay" id="overlay">
                     <div id="registerForm" class="form-content">
                         <form>
                             <label for="nome">Nome</label>
@@ -25,9 +25,9 @@
                             <button type="submit">Criar</button>
                         </form>
                     </div>
-                </div>
+                    </div>
                 <div class="links">
-                    <a href="#" class="icon"><i class="fab fa-google"></i></a>
+                    <a href="#" class="icon"><i class="fab fa-envelope-open"></i></a>
                     <a href="#" class="icon"><i class="fab fa-telegram"></i></a>
                     <a href="#" class="icon"><i class="fab fa-whatsapp"></i></a>
                 </div>
