--- a/index.html
+++ b/index.html
@@ -13,23 +13,11 @@
             <div class="new-member">
                 <h2>BEM VINDO</h2>
                 <h3>Novo Login</h3>
-                <label for="toggleForm" class="toggle-label blue-text">Criar conta</label>
-                   <input type="checkbox" id="toggleForm" class="toggle-checkbox">   
-                    <div class="overlay" id="overlay">
-                    <div id="registerForm" class="form-content">
-                        <form>
-                            <label for="nome">Nome</label>
-                            <input type="text" id="nome" name="nome" required placeholder="Digite aqui" />
-                            <label for="email">E-mail:</label>
-                            <input type="email" id="email" name="email" required placeholder="Digite aqui" />
-                            <button type="submit">Criar</button>
-                        </form>
-                    </div>
-                    </div>
+                <a href="./src/pages/register.html">Criar Conta</a>
                 <div class="links">
-                    <a href="#" class="icon"><i class="fab fa-envelope-open"></i></a>
-                    <a href="#" class="icon"><i class="fab fa-telegram"></i></a>
-                    <a href="#" class="icon"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://www.google.com/intl/pt-BR/gmail/about/" class="icon"><i class="fab fa-envelope-open"></i></a>
+                    <a href="https://web.telegram.org/k/" class="icon"><i class="fab fa-telegram"></i></a>
+                    <a href="https://web.whatsapp.com/" class="icon"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
         </div>
@@ -41,10 +29,13 @@
                     <div class="form-container">
                         <div class="login">
                             <input type="text" name="username" id="username" placeholder="USUÁRIO">
+                            <i class="fas fa-user"></i>
                         </div>
                         <div class="login">
                             <input type="password" name="password" id="password" placeholder="SENHA">
+                            <i class="fas fa-lock"></i>
                         </div>
+                        
                         <div class="remember-forgot">
                             <label>
                                 <input type="checkbox"> Lembrar de mim
@@ -54,9 +45,9 @@
                         <button type="submit" class="btn">Entrar</button>
                         <div class="register-link">
                             <div class="social-icons">
-                                <a href="#" class="icon facebook"><i class="fab fa-facebook"></i></a>
-                                <a href="#" class="icon instagram"><i class="fab fa-instagram"></i></a>
-                                <a href="#" class="icon twitter"><i class="fab fa-twitter"></i></a>
+                                <a href="https://www.facebook.com/" class="icon facebook"><i class="fab fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/" class="icon instagram"><i class="fab fa-instagram"></i></a>
+                                <a href="https://twitter.com/?lang=pt-br" class="icon twitter"><i class="fab fa-twitter"></i></a>
                             </div>
                         </div>
                     </div>
